--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css" />
   <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +23,7 @@
       <!-- スマホ用メニューボタン -->
       <nav id="menu_sp">
         <!-- ナビゲーションを開く -->
-        <div class="hamburger_open" onclick="document.getElementById('nav_sp').style.display= 'block'">
+        <div class="hamburger_open" onclick="document.getElementById('nav_sp').style.display = 'block'">
           <div class="ham_cercle">
             <span class="ham_open"></span>
             <span class="ham_open"></span>
@@ -30,33 +33,36 @@
       </nav>
       <!-- メニューの中身 -->
       <!-- ナビゲーションを閉じる -->
-      <nav id="nav_sp">
-        <div class="hamburger_close" onclick="document.getElementById('nav_sp').style.display='block'">
+      <nav id="nav_sp"　style="display: block;">
+        <div class="hamburger_close" onclick="document.getElementById('nav_sp').style.display ='none'">
           <span class="ham_close_1"></span>
           <span class="ham_close_2"></span>
         </div>
         <!-- メニューリスト -->
+        <div class="area_logo_header">
+          <a class="store_logo" href="index.html">NATURAL KITCHEN</a>
+        </div>
+        <div class="ham_img">
+          <img src="wp-admin/images/woman.jpg" class="ham_img1">
+        </div>
         <ul class="list_nav_header">
-          <div class="area_logo_header">
-            <a class="store_logo" href="index.html">NATURAL KITCHEN</a>
-          </div>
           <li>
-            <a href="" onclick="document.getElementById('nav_sp').style.display = 'note'">ABOUT NATURAL KITCHEN</a> 
+            <a href="about natural kitchen.html" onclick="document.getElementById('nav_sp').style.display = 'none'">ABOUT NATURAL KITCHEN</a> 
           </li>
           <li>
-            <a href="" onclick="document.getElementById('nav_sp').style.display = 'note'">Healthy Food</a> 
+            <a href="" onclick="document.getElementById('nav_sp').style.display = 'none'">Healthy Food</a> 
           </li>
           <li>
-            <a href="" onclick="document.getElementById('nav_sp').style.display = 'note'">Menu</a> 
+            <a href="" onclick="document.getElementById('nav_sp').style.display = 'none'">Menu</a> 
           </li>
           <li>
-            <a href="" onclick="document.getElementById('nav_sp').style.display = 'note'">Blog</a> 
+            <a href="" onclick="document.getElementById('nav_sp').style.display = 'none'">Blog</a> 
           </li>
           <li>
-            <a href="" onclick="document.getElementById('nav_sp').style.display = 'note'">Recruitment</a> 
+            <a href="" onclick="document.getElementById('nav_sp').style.display = 'none'">Recruitment</a> 
           </li>
           <li>
-            <a href="" onclick="document.getElementById('nav_sp').style.display = 'note'">Contact</a> 
+            <a href="" onclick="document.getElementById('nav_sp').style.display = 'none'">Contact</a> 
           </li>
         </ul>
       </nav>
@@ -64,15 +70,30 @@
   <!-- ヘッダー　ここまで -->
   <!-- メインビジュアル -->
   <main>
-    <div id="main_visual">
-      <div class="main_visual_pic1">
-        <div class="concept_message">
-          <p class="message_01">カラダに</p>
-          <p class="message_02">やさしいコーヒーを</p>
+    <section>
+      <div id="main_visual">
+       <div class="main_visual_pic1">
+         <div class="concept_message">
+         </div>
+         <img src="wp-admin/images/shop-out.jpg" class="main_pic">
         </div>
-        <img src="wp-admin/images/barista.jpg" class="main_pic">
+        <div class="main_visual_pic2">
+          <div class="concept_message">
+            <p class="message_01">フードは</p>
+            <p class="message_02">厳選オーガニック食材を使用</p>
+          </div>
+          <img src="wp-admin/images/lettuce (2).jpg" class="main_pic">
+        </div>
       </div>
-    </div>
+        <div class="main_visual_pic3">
+          <div class="concept_message">
+            <p class="message_01">豊かな香りと</p>
+            <p class="message_02">深いコクのこだわりコーヒー</p>
+          </div>
+          <img src="wp-admin/images/barista.jpg" class="main_pic">
+        </div>
+      </div>
+    </section>
     <!-- Enjoy organic　ここから -->
     <section id="content01">
       <h1 class="title">Enjoy organic</h1>
@@ -80,16 +101,25 @@
       <div class="messages">
         <div class="message_03">
           <p class="message_04">
-            こんにちは！私たちは創業当初から、カラダにやさしいコーヒーを提供しています。当店のコーヒー、フードは、全てオーガニックの物を使用しています。カフェインレスのコーヒーもご用意しておりますので、お気軽にお立ち寄りください。
+            こんにちは！<br>当店のコーヒー、フードは、全てオーガニックの物を使用しています。
+          </p>
+          <p class="message_04">
+            私たちは創業当初から、カラダにやさしいコーヒーを提供しています。
+          </p>
+          <p class="message_04">
+            当店のコーヒー、フードは、全てオーガニックの物を使用しています。
+          </p>
+          <p class="message_04">
+            カフェインレスのコーヒーもご用意しておりますので、お気軽にお立ち寄りください。
           </p>
         </div>
       </div>
       <div class="button_content">
-        <button id="button_01">
+        <a herf="">
           <p class="button_message_01">
-            ABOUT NATURAL KITCHEN
+            ABOUT NATURAL KITCHEN 　>
           </p>
-        </button>
+        </a>
       </div>
     </section>
     <!-- Enjoy organic　ここまで -->
@@ -101,14 +131,16 @@
       <div class="messages">
         <div class="message_03">
           <p class="message_04">
-            私たちのヘルシーフードは、厳選されたオーガニック食材を使用し、栄養バランスを考慮して調理されています。添加物や保存料を一切使用していません。
+            私たちのヘルシーフードは、厳選されたオーガニック食材を使用し、栄養バランスを考慮して調理されています。<br>添加物や保存料を一切使用していません。
           </p>
         </div>
-        <button id="button_02">
-          <p class="button_message_02">
-            Read More >
-          </p>
-        </button>
+        <div class="button_content_02">
+          <a herf="">
+            <p class="button_message_02">
+              Read More >
+            </p>
+          </a>
+        </div>
       </div>
     </section>
     <!-- Healthy food ここまで-->
@@ -120,14 +152,19 @@
       <div class="messages">
         <div class="message_03">
           <p class="message_04">
-            当店のコーヒー、フードは、全てオーガニックの物を使用しています。お子様でも安心してお召し上がりください。
+            当店のコーヒー、フードは、全てオーガニックの物を使用しています。
+          </p>
+          <p class="message_04">
+            お子様でも安心してお召し上がりください。
           </p>
         </div>
-        <button id="button_02">
-          <p class="button_message_02">
-            Read More >
-          </p>
-        </button>
+        <div class="button_content_02">
+          <a herf="">
+            <p class="button_message_02">
+              Read More >
+            </p>
+          </a>
+        </div>
       </div>
     </section>
     <!-- Menu　ここまで -->
@@ -140,20 +177,41 @@
       <div class="blog_content">
         <h1 class="title_02">Blog</h1>
       </div>
-      <div class="blog_contents">
-        <p class="date">2025.03.01</p>
-        <p class="blog_title">Webサイトのリニューアル</p>
-        <p class="message_05">新たに、Webサイトをリニューアルしました。</p>
+      <div class="blog_photo">
+        <img src="wp-admin/images/blog.jpg" class="pic_5">
       </div>
       <div class="blog_contents">
-        <p class="date">2025.02.17</p>
-        <p class="blog_title">ホワイトデーチョコレートセット販売のお知らせ</p>
-        <p class="message_05">ホワイトデーチョコレートセットの販売を開始しました。</p>
+        <div class="title_contents">
+          <p class="blog_title">Webサイトのリニューアル</p>
+          <p class="date">2025.03.01</p>
+        </div>
+        <div>
+          <p class="message_05">新たに、Webサイトをリニューアルしました。</p>
+        </div>
+      </div>
+      <div class="blog_photo">
+        <img src="wp-admin/images/chocolates1 (1).jpg" class="pic_5">
       </div>
       <div class="blog_contents">
-        <p class="date">2025.02.10</p>
-        <p class="blog_title">さくらドリンク販売のお知らせ</p>
-        <p class="message_05">これからの季節にぴったりのさくらドリンクの販売を開始しました。</p>
+        <div class="title_contents">
+          <p class="blog_title">ホワイトデーチョコレートセット販売のお知らせ</p>
+          <p class="date">2025.02.17</p>
+        </div>
+        <div>
+          <p class="message_05">ホワイトデーチョコレートセットの販売を開始しました。</p>
+        </div>
+      </div>
+      <div class="blog_photo">
+        <img src="wp-admin/images/sakura-drink.jpg" class="pic_5">
+      </div>
+      <div class="blog_contents">
+        <div class="title_contents">
+          <p class="blog_title">さくらドリンク販売のお知らせ</p>
+          <p class="date">2025.02.10</p>
+        </div>
+        <div>
+          <p class="message_05">これからの季節にぴったりのさくらドリンクの販売を開始しました。</p>
+        </div>
       </div>
       <div class="message_06">
         <p class="message_03">
@@ -171,21 +229,24 @@
       <h1 class="title">Recruitment</h1>
       <div class="box">
         <img src="wp-admin/images/waitress.jpg" class="pic_3">
-        <div class="messages">
+        <div class="messages_02">
           <div class="message_03">
             <p class="message_04_02">
               私たちのチームに参加しませんか？
             </p>
             <p class="message_05_02">
-              <span>NATURAL KITCHEN</span>では、オーガニック食品や健康に関心のあるスタッフを募集しています。経験者はもちろん、未経験者も大歓迎です。
+              <span>NATURAL KITCHEN</span>では、<br>オーガニック食品や健康に関心のあるスタッフを募集しています。
+            </p>
+            <p class="message_05_02">
+              経験者はもちろん、<br>未経験者も大歓迎です。
             </p>
           </div>
-          <div class="button_content_02">
-            <button id="button_03">
-              <p class="button_message_03">
-                Read More >
-              </p>
-            </button>
+          <div class="button_content_03">
+              <a herf="">
+                <p class="button_message_03">
+                  Read More >
+                </p>
+              </a>
           </div>
         </div>
       </div>
@@ -201,12 +262,15 @@
             ご質問やご意見がございましたら、以下の方法でお気軽にお問い合わせください。
           </p>
         </div>
-        <div class="button_content">
-          <button id="button_01">
-            <p class="button_message_01">
-              ✉️　お問い合わせはこちら
+        <div class="button_content_04">
+          <a herf="">
+            <div>
+              <img src="wp-admin/images/material-symbols-light_mail-outline.png" class="mail_icon">
+            </div>
+            <p class="button_message_04">
+              お問い合わせはこちら 　>
             </p>
-          </button>
+          </a>
         </div>
     </section>
     <!-- Contact ここまで -->
@@ -240,23 +304,32 @@
     </div>
     <div class="store_access">
       <div class="store_access_02">
-        <p class="address_word">住所</p>
-        <p class="address">東京都渋谷区恵比寿西1-2-3</p>
-      </div>
-      <div class="store_access_02">
-        <p class="access_word">アクセス</p>
-        <p class="access">東急東横線「代官山」駅<br>1番出口より南へ徒歩6分</p>
+        <p class="store_time">営業時間</p>
+        <p class="time">11:00 - 14:00 (LO:13:30)<br>17:00 - 21:00 (LO:20:30)</p>
       </div>
       <div class="store_access_02">
         <p class="phone_number_word">電話</p>
         <p class="phone_number">03-0000-0000</p>
       </div> 
+      <div class="store_access_02">
+        <p class="address_word">住所</p>
+        <p class="address">東京都渋谷区恵比寿西1-2-3</p>
+      </div>
+      <div class="store_access_03">
+        <div class="div_1">
+          <p class="access_word">アクセス</p>
+          <p class="access">東急東横線「代官山」駅<br>1番出口より南へ徒歩6分</p>
+        </div>
+        <div class="div_2">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.163671155139!2d139.70875925!3d35.648338949999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b417426f3b1%3A0x5f59b4471831195e!2z44CSMTUwLTAwMjEg5p2x5Lqs6YO95riL6LC35Yy65oG15q-U5a-_6KW_77yR5LiB55uu77yS!5e0!3m2!1sja!2sjp!4v1744014707466!5m2!1sja!2sjp" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
     </div>
     <div class="sns_footer">
       <div class="sns_btns">
-        <a href=""><img src="wp-admin/images/ico-instagram.svg"></a>
-        <a href=""><img src="wp-admin/images/ico-facebook.svg"></a>
-        <a href=""><img src="wp-admin/images/ico-twitter.svg"></a>
+        <a href=""><img src="wp-admin/images/icons8-instagram-50.png"></a>
+        <a href=""><img src="wp-admin/images/icons8-フェイスブック-50.png"></a>
+        <a href=""><img src="wp-admin/images/icons8-ツイッターx-50.png"></a>
       </div>
     </div>
   <!-- フッダー　ここまで -->
