--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- ヘッダー -->
-  <header>
+  <header class="top">
     <!-- ロゴエリア -->
       <div id="area_logo_header">
         <a class="store_logo" href="index.html">NATURAL<br>KITCHEN</a>
@@ -84,7 +84,6 @@
           </div>
           <img src="wp-admin/images/lettuce (2).jpg" class="main_pic">
         </div>
-      </div>
         <div class="main_visual_pic3">
           <div class="concept_message">
             <p class="message_01">豊かな香りと</p>
@@ -95,7 +94,7 @@
       </div>
     </section>
     <!-- Enjoy organic　ここから -->
-    <section id="content01">
+    <section id="content02">
       <h1 class="title">Enjoy organic</h1>
       <p class="sab_title">オーガニックをお楽しみください</p>
       <div class="messages">
@@ -115,7 +114,7 @@
         </div>
       </div>
       <div class="button_content">
-        <a herf="">
+        <a href="about natural kitchen.html">
           <p class="button_message_01">
             ABOUT NATURAL KITCHEN 　>
           </p>
@@ -124,14 +123,17 @@
     </section>
     <!-- Enjoy organic　ここまで -->
     <!-- Healthy food ここから-->
-    <section id="content02">
+    <section id="content01">
       <h1 class="title">Healthy Food</h1>
       <img src="wp-admin/images/healthy.jpg" class="pic_1">
       <img src="wp-admin/images/healthy.jpg" class="pic_2">
       <div class="messages">
         <div class="message_03">
           <p class="message_04">
-            私たちのヘルシーフードは、厳選されたオーガニック食材を使用し、栄養バランスを考慮して調理されています。<br>添加物や保存料を一切使用していません。
+            私たちのヘルシーフードは、厳選されたオーガニック食材を使用し、栄養バランスを考慮して調理されています。
+          </p>
+          <p class="message_04">
+            添加物や保存料を一切使用していません。
           </p>
         </div>
         <div class="button_content_02">
@@ -145,7 +147,7 @@
     </section>
     <!-- Healthy food ここまで-->
     <!-- Menu ここから -->
-    <section id="content01">
+    <section id="content02">
       <h1 class="title">Menu</h1>
       <img src="wp-admin/images/menu.jpg" class="pic_1">
       <img src="wp-admin/images/menu.jpg" class="pic_2">
@@ -168,6 +170,53 @@
       </div>
     </section>
     <!-- Menu　ここまで -->
+    <!-- Store ここから -->
+    <section id="content01">
+      <h1 class="title">Store</h1>
+      <div class="store_pic">
+        <img src="wp-admin/images/shop-out.jpg"  class="pic_6">
+      </div>
+      <div class="messages_03">
+        <div class="message_03_02">
+          <p class="message_07">
+            営業時間
+          </p>
+          <p class="message_07">
+            11:00-14:00(LO 13:30)<br>
+            17:00-21:00(LO 20:30)
+          </p>
+        </div>
+        <div class="message_03_02">
+           <p class="message_07">
+            電話
+          </p>
+          <p class="message_07">
+            03-0000-0000
+          </p>
+        </div>
+        <div class="message_03_02">
+          <p class="message_07">
+            住所
+          </p>
+          <p class="message_07">
+            東京都渋谷区恵比寿西1-2-3
+          </p>
+        </div>
+        <div class="message_03_02">
+          <p class="message_07">
+            アクセス
+          </p>
+          <p class="message_07">
+            東急東横線「代官山」駅<br>
+            1番出口より南へ徒歩6分
+          </p>
+        </div>
+        <div class="div_2">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.163671155139!2d139.70875925!3d35.648338949999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b417426f3b1%3A0x5f59b4471831195e!2z44CSMTUwLTAwMjEg5p2x5Lqs6YO95riL6LC35Yy65oG15q-U5a-_6KW_77yR5LiB55uu77yS!5e0!3m2!1sja!2sjp!4v1744014707466!5m2!1sja!2sjp" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </section>
+    <!-- Store ここまで -->
     <!-- Blog　ここから -->
     <section id="content02">
       <div class="cercle">
@@ -283,7 +332,7 @@
     <div id="footer_link">
       <ul>
         <li>
-          <a href="aboutnaturalkitchen.html">ABOUT NATURAL KITCHEN</a>
+          <a href="about natural kitchen.html">ABOUT NATURAL KITCHEN</a>
         </li>
         <li>
           <a href="healthyfood.html">Healthy Food</a>
@@ -302,7 +351,7 @@
         </li>
       </ul>
     </div>
-    <div class="store_access">
+    <!-- <div class="store_access">
       <div class="store_access_02">
         <p class="store_time">営業時間</p>
         <p class="time">11:00 - 14:00 (LO:13:30)<br>17:00 - 21:00 (LO:20:30)</p>
@@ -324,7 +373,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.163671155139!2d139.70875925!3d35.648338949999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b417426f3b1%3A0x5f59b4471831195e!2z44CSMTUwLTAwMjEg5p2x5Lqs6YO95riL6LC35Yy65oG15q-U5a-_6KW_77yR5LiB55uu77yS!5e0!3m2!1sja!2sjp!4v1744014707466!5m2!1sja!2sjp" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="sns_footer">
       <div class="sns_btns">
         <a href=""><img src="wp-admin/images/icons8-instagram-50.png"></a>
@@ -335,3 +384,4 @@
   <!-- フッダー　ここまで -->
   </footer>
 </body>
+</html>
