--- a/about natural kitchen.html
+++ b/about natural kitchen.html
@@ -69,14 +69,37 @@
   </header>
   <!-- ヘッダー　ここまで -->
 
-  <main>
+  <main class="main02">
     <!-- タイトル -->
-    <section>
+    <section id="content02_2">
       <div class="about_natural_kitchen">
-        <h1 class="title">About Natural Kitchen</h1>
-        <p class="sab_title">ナチュラルキッチンについて</p>
+        <h1 class="title_03">ABOUT NATURAL KITCHEN</h1>
+        <p class="sab_title_2">ナチュラルキッチンについて</p>
       </div>
-
+      <div>
+        <img src="wp-admin/images/barista.jpg" class="pic_7">
+      </div>
+      <div class="message_03_03">
+        <p class="message_04">
+          NATURAL KITCHENは、心と体にやさしいオーガニックフードとドリンクを提供するカフェです。
+        </p>
+        <p class="message_04">
+          私たちは、自然の恵みを大切にし、厳選したオーガニック食材を使用したメニューで、皆さまに健康的で美味しいひとときをお届けしています。
+        </p>
+      </div>
+    </section>
+    <section class="content02_2">
+      <div>
+        <img src="wp-admin/images/shop_out2.png" class="pic_8">
+      </div>
+      <div class="message_03_03">
+        <p class="message_04">
+          店内は木の温もりを感じる落ち着いた空間で、ナチュラルな雰囲気に包まれながら、ゆったりとした時間を過ごしていただけます。
+        </p>
+        <p class="message_04">
+          カラダに優しいオーガニックコーヒーやハーブティー、季節の食材を使ったこだわりのスムージー、新鮮な野菜をふんだんに使用したサラダやプレートメニューなど、心も満たされる料理をご用意しています。
+        </p>
+      </div>
     </section>
   </main>
   <footer>
@@ -139,3 +162,4 @@
   </footer>
   <!-- フッダー　ここまで -->
 </body>
+</html>
